school summary complete.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3092379e",
+   "id": "4aeb6a35",
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0a0117d9",
+   "id": "ed0d42a9",
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2583,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "990a6e57",
+   "id": "6424f249",
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "631f1b01",
+   "id": "ffead35c",
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3ccd17c8",
+   "id": "a781efe8",
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2938,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "630b3111",
+   "id": "b57393ba",
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4262407b",
+   "id": "1a28d0e2",
    "metadata": {},
    "outputs": [
     {
@@ -3117,7 +3117,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "01f0e107",
+   "id": "6cde13f8",
    "metadata": {},
    "outputs": [
     {
@@ -3155,7 +3155,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3598391a",
+   "id": "88f9ef6d",
    "metadata": {},
    "outputs": [
     {
@@ -3194,7 +3194,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9d1a37e0",
+   "id": "4add891e",
    "metadata": {},
    "outputs": [
     {
@@ -3232,7 +3232,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0cdc3a4f",
+   "id": "ec2e5b5d",
    "metadata": {},
    "outputs": [
     {
@@ -3267,7 +3267,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3cc6507c",
+   "id": "7c0e6711",
    "metadata": {},
    "outputs": [
     {
@@ -3500,7 +3500,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "74eea660",
+   "id": "0a7e41d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3513,7 +3513,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1ac6f838",
+   "id": "9d156b36",
    "metadata": {},
    "outputs": [
     {
@@ -3550,7 +3550,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "93325ee3",
+   "id": "66e0463d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3563,7 +3563,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "024409f3",
+   "id": "fd48a567",
    "metadata": {},
    "outputs": [
     {
@@ -3703,7 +3703,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9865d271",
+   "id": "a5df9dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3716,7 +3716,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "48ad800d",
+   "id": "c9a8a263",
    "metadata": {},
    "outputs": [
     {
@@ -3753,7 +3753,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "70a0a5c8",
+   "id": "1591080a",
    "metadata": {},
    "outputs": [
     {
@@ -3790,7 +3790,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "13f2cdc4",
+   "id": "67f97151",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3803,7 +3803,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "22bc2921",
+   "id": "a805d594",
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "70643572",
+   "id": "c2255110",
    "metadata": {},
    "outputs": [
     {
@@ -3875,7 +3875,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6cafdbd3",
+   "id": "f8c9c312",
    "metadata": {},
    "outputs": [
     {
@@ -4018,7 +4018,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "920b9c91",
+   "id": "b3100d35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4029,7 +4029,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "21468fb4",
+   "id": "1c7078b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4040,7 +4040,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "30062025",
+   "id": "2413dae9",
    "metadata": {},
    "outputs": [
     {
@@ -4076,7 +4076,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "64c53481",
+   "id": "b0a3ea22",
    "metadata": {},
    "outputs": [
     {
@@ -4230,7 +4230,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1b72b203",
+   "id": "5fba3fd1",
    "metadata": {},
    "outputs": [
     {
@@ -4379,7 +4379,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a1c606fc",
+   "id": "b544476c",
    "metadata": {},
    "outputs": [
     {
@@ -4524,7 +4524,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1c8817c0",
+   "id": "0fbcba31",
    "metadata": {},
    "outputs": [
     {
@@ -4668,8 +4668,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "id": "66261018",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "daa65918",
+   "id": "e2157688",
    "metadata": {},
    "outputs": [],
    "source": []
